name:                thodo
version:             0.1.0.0
synopsis:            Command line to-do list
description:         A simple command line to-do list tool written in Haskell
homepage:            https://github.com/DimaSamoz/thodo#readme
license:             MIT
license-file:        LICENSE
author:              Dima Samoz
maintainer:          dima.samoz@gmail.com
copyright:           2016 Dima Samoz
category:            Tools
build-type:          Simple
cabal-version:       >=1.10

executable thodo
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Types
                     , Printing
                     , Parsing
  build-depends:       base >= 4.7 && < 5
                     , time
                     , optparse-applicative
                     , parsec
                     , transformers
                     , pretty-show
