name:                thodo
version:             0.1.0.0
synopsis:            Command line to-do list
description:         A simple command line to-do list tool written in Haskell
homepage:            https://github.com/DimaSamoz/thodo#readme
license:             MIT
license-file:        LICENSE
author:              Dima Samoz
maintainer:          dima.samoz@gmail.com
copyright:           2016 Dima Samoz
category:            Tools
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Types
                     , Commands.Options
                     , Commands.Common
  other-modules:       Printing
                     , Parsing
                     , Util
                     , TodoLenses
                     , Commands.Add.Parser
                     , Commands.Add.Handler
                     , Commands.What.Parser
                     , Commands.What.Handler
                     , Commands.Tick.Parser
                     , Commands.Clear.Parser
                     , Commands.Init.Handler
  build-depends:       base >= 4.7 && < 5
                     , time
                     , optparse-applicative
                     , parsec
                     , transformers
                     , filepath
                     , directory
                     , lens
                     , haskeline
                     , pretty-show

executable thodo
  hs-source-dirs:      exe
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , optparse-applicative
                     , thodo
